Add /note POST and /tags GET routes to Swagger
